--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>No se ha encontrado esta publicación (404)</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
@@ -19,8 +19,10 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+
+
+    <h1>No se ha encontrado esta publicación.</h1>
+    <p>Es posible que tu URL sea incorrecta, que la publicación se haya eliminado o que esta cuenta no tenga acceso a la publicación.</p>
   </div>
 </body>
 </html>
